syntax = "proto3";
package orbit.v1;

option go_package = "github.com/Gravity-Bridge/Gravity-Bridge/module/x/orbit/types";
message Params {}

// GenesisState struct, containing all persistant data required by the Gravity
// module
message GenesisState { Params params = 1; }